<resources>
    <string name="app_name">Blackjack</string>
    <string name="karty_gracza_d">Karty gracza</string>
    <string name="begin">Begin!</string>
    <string name="karty_krupiera">Karty krupiera</string>
    <string name="stand">STAND!</string>
    <string name="hit">HIT!</string>
    <string name="number_of_players">Number of players</string>
    <string name="number_of_decks">Number of decks</string>
    <string name="confirm">CONFIRM</string>
    <string name="settings">Settings</string>
    <string name="num_player_key">numPlayer</string>
    <string name="num_deck_key">numDeck</string>
    <string-array name="numOfPlayers_entries">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="numOfDecks_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>