<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/card3"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card2"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/card1"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/card2"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/playerText"
        app:layout_constraintEnd_toStartOf="@+id/card3"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/krupier1"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@+id/krupier2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/krupier2"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@+id/krupier3"
        app:layout_constraintStart_toEndOf="@+id/krupier1"
        app:layout_constraintTop_toBottomOf="@+id/krupierText"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/krupier3"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/krupier2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/krupierText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/karty_krupiera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/karty_gracza_d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="40dp"
        android:text="@string/begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hitButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="60dp"
        android:text="@string/hit"
        app:layout_constraintEnd_toStartOf="@+id/standButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/standButton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="60dp"
        android:text="@string/stand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hitButton"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>